# Fotokite

./: .gitignore  CMakeLists.txt  Communication.cpp  Communication.hpp  ContactPoint.cpp  ContactPoint.hpp  Fotokite.cpp  Fotokite.hpp  FotokiteState.cpp  FotokiteState.hpp  README.md  Serial.cpp  Serial.h  SerialCommunication.cpp  SerialCommunication.hpp  ServerCommunication.cpp  ServerCommunication.hpp  SocketCommunication.cpp  SocketCommunication.hpp  Visualization.cpp  Visualization.hpp  config.h  main.cpp  mainExecutePath.cpp  mainGoToWaypoint.cpp  mainLand.cpp  mainTakeoff.cpp
input/: Raycasting.txt  Relaxation.txt  Two Contact Points Working.txt  path.txt  pathContact.txt  velocity_control_test.txt  waypoints_iros_2019.txt
log/: 20171204202837.txt  20180130162056.txt  20180130164356.txt  20180130170055.txt  20180130170902.txt  20180130172217.txt  20180130173042.txt  20180130175750.txt  20180130180926.txt  20180130182251.txt  20180130182931.txt  20180130184216.txt  20180130184900.txt  20180130185437.txt  20180130190006.txt  20180130191441.txt  20180130192614.txt  20180130194310.txt  20180130195523.txt  20180130200000.txt  20180130200317.txt  20180130200458.txt  20180130200726.txt  20180130201155.txt  20180130201920.txt  20180130202121.txt  20180130204242.txt  20180131172846.txt  20180131190522.txt  20180201162009.txt  20180205164543.txt  20180205165336.txt  20180205171205.txt  20180205174014.txt  20180205175504.txt  20180205181102.txt  20180208182435.txt  20180208182929.txt  20180208183103.txt  20180208183425.txt  (+116 more)
nbproject/: configurations.xml  project.xml
(+18 files in other folders)
